# hands-on-modern-rl

./: .gitignore  README.md  commit_msg.txt  package-lock.json  package.json  pyproject.toml  vercel.json
.github/workflows/: release-pdf.yml
code/: README.md  requirements.txt
code/appendix_common_pitfalls/: debug_reward_hacking.py  debug_training_collapse.py  requirements.txt
code/chapter01_cartpole/: 1-ppo_cartpole.py  hello_rl.py  hello_rl_tensorboard.py
code/chapter02_dpo/: 0-download_model.py  0-generate_data.py  2-train_dpo.py  3-train_dpo.py  requirements.txt
code/chapter03_mdp/: bellman_equation_verify.py  gridworld_q_learning.py  requirements.txt  two_armed_bandit.py
code/chapter04_dqn/: double_dqn_cartpole.py  dqn_atari_sb3.py  dqn_cartpole.py  dqn_gym_sb3.py  requirements.txt
code/chapter05_policy_gradient/: actor_critic_cartpole.py  reinforce_cartpole.py  reinforce_with_baseline.py  requirements.txt
code/chapter06_actor_critic/: actor_critic_pendulum.py  render_pendulum.py  requirements.txt
code/chapter06_ppo/: gae_visualization.py  ppo_from_scratch.py  ppo_lunar_lander.py  requirements.txt
code/chapter07_alignment/: dpo_hands_on.py  dpo_math_reward.py  requirements.txt
code/chapter08_grpo_rlvr/: grpo_math_reasoning.py  grpo_mechanism.py  requirements.txt  rule_based_reward.py
code/chapter08_rlhf/: requirements.txt
code/chapter09_alignment/: requirements.txt
code/chapter09_continuous_control/: ppo_td3_sac_comparison.py  requirements.txt  sac_halfcheetah.py
docs/: index.md
scripts/: fix-heading-numbers.mjs  optimize-assets.mjs
(+119 files in other folders)
